# quanta_tissu

./: .gitignore  .workout_state  App.cpp  CMakeLists.txt  Dockerfile  ETHICAL_REVIEW.md  Game.cpp  LICENSE  Makefile  README.md  TEST_SUITE_ANALYSIS.md  analyzer_log.txt  analyzer_stdout.txt  bdd_output.txt  cpp_test_output.txt  docker-compose.yml  fibonacci.py  integrated_workout.sh  quanta_tissu.py  requirements.txt  run_all_tests  run_all_tests.cpp  run_all_tests.js  run_tests.py  screen_awake.sh  stellar_report.txt  temp_tokenizer_test.py  test_sinew_app  test_title.kdenlive  tissdb_server  tissu_sinew.cpp  tissu_sinew.h  train_model_exe  trained_tokenizer_merges.txt  trained_tokenizer_vocab.json  unit_test_output.txt
corpus/: data.txt  resiliency_research.txt
docs/: TissLang.md  TissLang_plan.md  agent_strategies.md  agent_training.md  agentic_tooling_and_visualization.md  api_spec.yml  apps_enhancements.md  bdd_error_analysis.md  bdd_errors.md  bdd_status_818.md  challenges.md  checkpoint.md  current_bdd_status_and_remediation.md  dashboard_builder.md  database_schema_planning_implementation.md  ecological_awareness.md  ecological_roadmap.md  enhancements.md  enhancements_functional_roadmap.md  framework_architecture.md  generator_sampling_strategies.md  graph_explorer.md  hipaa_implementation_plan.md  humanity_and_ai.md  ide_development.md  implementation_summary.md  index.html  latest_test_results.md  legacylm_refactor_summary.md  llm_remaining_items.md  llm_retrieval_evaluation_process.md  model_improvement_plan2.md  models_network_diagrams.md  nexus_flow_phase_enhancements.md  overview.md  phase_i_plan.md  phase_ii_plan.md  phase_iii_plan.md  phase_shift.md  plan.md  (+96 more)
lite/: README.md  index.js  package.json  query_executor.js  test.js  tissdblite_server.js
models/: quanta_tissu.npz  trained_tokenizer_merges.txt  trained_tokenizer_vocab.json
quanta_tissu/: schema_manager.cpp  schema_manager.h  setup_and_populate.sh  setup_tissdb_graphs.sh  (+2 more)
quanta_tissu/ctisslm/: CMakeLists.txt  layers.h  transformer_components.h
quanta_tissu/ide/c/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SearchDialog.cpp  TissEditor.cpp  TissEditor.h  TissLinter.h  TissSyntaxHighlighter.cpp  TissSyntaxHighlighter.h  main.cpp
quanta_tissu/ide/c/cli/: search_replace.cpp
quanta_tissu/tisslm/program/core/: CMakeLists.txt  MatrixMultiplier.cpp  MatrixMultiplier.h  config.cpp  config.h  configurableattention.cpp  configurableattention.h  dropout.cpp  dropout.h  embedding.cpp  embedding.h  feedforward.cpp  feedforward.h  hash_embedder.cpp  hash_embedder.h  layernorm.cpp  layernorm.h  matrix.cpp  matrix.h  mock_embedder.cpp  mock_embedder.h  model_interface.h  multiheadattention.cpp  multiheadattention.h  parameter.cpp  parameter.h  positionalencoding.cpp  positionalencoding.h  transformer_model.cpp  transformer_model.h  transformerblock.cpp  transformerblock.h
tests/model/program/: CMakeLists.txt  README.md  advanced_analysis_test.cpp  advanced_sampling_test.cpp  arithmetic_debug_harness.cpp  arithmetic_results.txt  backward_pass_test.cpp  bayesian_sampling_test.cpp  bug_fix_verification_test.cpp  build_manual.sh  checkpoint_comparison_test.cpp  checkpoint_test.cpp  concatenate_test.cpp  dimension_integrity_test.cpp  dummy_merges.txt  dummy_vocab.json  encoding_test.cpp  experimental_sampling_test.cpp  forward_pass_test.cpp  full_fledged_workout_cpp  full_fledged_workout_cpp.cpp  generation_test.cpp  integrated_workout.sh  kv_cache_test.cpp  lora_test.cpp  matrix_test.cpp  mha_backward_test.cpp  model_generation_test.cpp  mqa_test.cpp  overfit_test.cpp  parser_test.cpp  rag_self_update_test.cpp  resume_training.cpp  rule_enforcement_test.cpp  standard_generation_test.cpp  stellar_inference_test.cpp  stellar_workout.sh  test_config.txt  test_db_and_retrieval.cpp  test_new_components.cpp  (+15 more)
tests/model/program/config/: TestConfig.h  test.conf  test_config.h
tests/model/program/db/: bdd_framework.cpp  bdd_framework.h  db_bdd_test_main.cpp  db_client_bridge.cpp  db_test_actions.cpp  db_test_actions.h  db_test_master.sh
tests/model/program/db/features/: core_connectivity.feature  database.feature  edge_cases.feature  extended_database.feature  more_database.feature
tests/model/program/db/steps/: database_steps.cpp  lite_steps.cpp  query_steps.cpp  transaction_steps.cpp
tests/model/program/stellar_inference/: CMakeLists.txt  model_config.json  stellar_generator.cpp  stellar_generator.h  stellar_inference_test.cpp  stellar_meta_analyst.cpp  stellar_meta_analyst.h  stellar_reporter.cpp  stellar_reporter.h  stellar_tokenizer.cpp  stellar_tokenizer.h  stellar_trainer.cpp  stellar_trainer.h  stellar_visualizer.cpp  stellar_visualizer.h
tissdb/: CMakeLists.txt  Makefile  Makefile.mk  README.md  main.cpp
tissdb/analysis/: ACID_analysis.cpp  relational_analysis.cpp  schema_analysis.cpp  transaction_analysis.cpp
tissdb/api/: http_server.cpp  http_server.h  https_server.cpp  https_server.h
tissdb/audit/: audit_logger.cpp  audit_logger.h
tissdb/auth/: rbac.cpp  rbac.h  token_manager.cpp  token_manager.h
tissdb/common/: binary_stream_buffer.cpp  binary_stream_buffer.h  checksum.cpp  checksum.h  document.cpp  document.h  log.h  operation.h  schema.h  schema_validator.cpp  schema_validator.h  serialization.cpp  serialization.h
tissdb/crypto/: kms.cpp  kms.h
tissdb/json/: json.cpp  json.h
tissdb/query/: ast.h  executor.cpp  executor.h  executor_common.cpp  executor_common.h  executor_delete.cpp  executor_delete.h  executor_insert.cpp  executor_insert.h  executor_select.cpp  executor_select.h  executor_update.cpp  executor_update.h  join_algorithms.cpp  join_algorithms.h  parser.cpp  parser.h
tissdb/storage/: BPTree.h  List.h  Utils.h  bpp_tree.h  bpp_tree_wrapper.h  btree.cpp  btree.h  collection.cpp  collection.h  database_manager.cpp  database_manager.h  indexer.cpp  indexer.h  lsm_tree.cpp  lsm_tree.h  memtable.cpp  memtable.h  native_b_tree.cpp  native_b_tree.h  sstable.cpp  sstable.h  transaction_manager.cpp  transaction_manager.h  wal.cpp  wal.h
tissdb/tools/: backup_tool.cpp
(+842 files in other folders)
